# tigerbeetle-py

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  docker-compose.yml  pdm_build.py  pyproject.toml
src/tigerbeetle_py/: __init__.py  _client.py  bindings.py  client.py  helpers.py
src/tigerbeetle_py/_types/: bindings.py  errors.py  uid.py  uint.py
src/tigerbeetle_py/native/: tb_client.h
tests/integration/: conftest.py  test_client.py
tests/unit/: __init__.py  test_uid.py  test_uint.py
